Include color illustrations; first paragraph of Performance

--- a/neuroevolution_of_augmenting_topologies_paper_4.tex
+++ b/neuroevolution_of_augmenting_topologies_paper_4.tex
@@ -196,6 +196,10 @@ This necessity of a randomly mutated initial population to produce innovation ho
 \subsection{Performance of NEAT} \label{sec:neat_performance}
 % Include traditional NEAT performance but also NEAT performance in more current examples
 
+Beginning with Stanley \& Miikkulainen's first three papers about NEAT in 2002 and 2004 [cite all three] did they include test results that significantly outperform [cite ablation study] the preceding NE methods in terms of speed and required evaluations in key benchmarks like the double pole balancing task [cite paper introducing this benchmark].
+
+
+
 [Incorporate deleted 'Landmark Research in Neuroevolution' Chapter (also see .tex notes)]
 
 \blindtext
