Add notes for chapters left; slightly further Performance chapter

--- a/neuroevolution_of_augmenting_topologies_paper_4.tex
+++ b/neuroevolution_of_augmenting_topologies_paper_4.tex
@@ -196,7 +196,7 @@ This necessity of a randomly mutated initial population to produce innovation ho
 \subsection{Performance of NEAT} \label{sec:neat_performance}
 % Include traditional NEAT performance but also NEAT performance in more current examples
 
-Beginning with Stanley \& Miikkulainen's first three papers about NEAT in 2002 and 2004 [cite all three] did they include test results that significantly outperform [cite ablation study] the preceding NE methods in terms of speed and required evaluations in key benchmarks like the double pole balancing task [cite paper introducing this benchmark].
+Beginning with Stanley \& Miikkulainens' first three papers about NEAT in 2002 and 2004 [cite all three] did they include thorough performance analysis, which in each case shows NEAT significantly outperforming [cite test sections from each paper] preceding NE methods. NEAT surpass these preceding methods in terms of speed, required evaluations and simplicity of the solution in key benchmarks like the double pole balancing task [cite paper establishing this benchmark], and [xor?]... [cite paper establishing this benchmark]. [possibly refer here to the comparison table]
 
 
 
@@ -211,6 +211,13 @@ Beginning with Stanley \& Miikkulainen's first three papers about NEAT in 2002 a
 \subsection{Practical Applications of NEAT}
 % Go especially into detail what Stanley considered great NEAT applications in his reddit AMA
 % Introduce my own code accompanying this paper
+
+% First: Stanleys favored NEAT application to determine quork size
+% Then Tu-Darmstadt TCP-NEAT
+% Then NEAT-Python, my application and the plan to standardize it as a TF addon
+
+% NEAT Software catalogue: http://eplex.cs.ucf.edu/neat_software/
+
 % https://www.seemoo.tu-darmstadt.de/theses/details/index.html%3Fno_cache=1&tx_abschlussarbeiten_abschlussarbeiten%255Babschlussarbeit%255D=996&tx_abschlussarbeiten_abschlussarbeiten%255Baction%255D=show&tx_abschlussarbeiten_abschlussarbeiten%255Bcontroller%255D=Abschlussarbeit&cHash=858c633006b4ee855.html
 
 \blindtext
@@ -222,6 +229,8 @@ Beginning with Stanley \& Miikkulainen's first three papers about NEAT in 2002 a
 \section{Conclusion}
 
 [Incorporate deleted 'Variants and Advancements of NEAT' Chapter (also see .tex notes). Incorporate it as a possible 'Ausblick']
+% Write about HyperNEAT, ES-HyperNEAT, Novelty Search, CoDeepNEAT, Real's research
+% Write about SGD and evolution combiningn increasingly with NE for the rough evolution and backpropagation for the finetuning
 
 \blindtext
 
