--- a/neuroevolution_of_augmenting_topologies_paper.tex
+++ b/neuroevolution_of_augmenting_topologies_paper.tex
@@ -66,7 +66,7 @@
 
 \section{Introduction}
 
-\IEEEPARstart{W}{ith} the rise of Deep Learning in this decade, see especially [AlexNet, +2 OTHER EXAMPLES], did the research community increasingly face the challenge of having to configure even more hyperparameters and layers when designing neural networks. In order to ease this design process did the concept of \textit{Automated Machine Learning} (short form: AutoML) come even more into focus. One method of AutoML - the evolution of artificial neural networks (short form: ANNs) - is addressed in this paper and its most prominent representative - NEAT - is thoroughly discussed. 
+\IEEEPARstart{W}{ith} the rise of Deep Learning in this decade, see especially [AlexNet, +2 OTHER EXAMPLES], did the machine learning research community increasingly face the challenge of having to configure even more hyperparameters, create even more layers and run even more tests. In order to ease this design process did the concept of \textit{Automated Machine Learning} (short form: AutoML) come into focus. One aspect of AutoML - the evolution of artificial neural networks (short form: ANNs) - is addressed in this paper and its most prominent representative - NEAT - is thoroughly discussed. 
 
 This evolution of artificial neural networks is called \textit{neuroevolution} and it is a form of evolutionary algorithm that generates specific ANNs through modification of its parameters, topology and rules in order to maximize the ANN's accuracy or fitness score. The neuroevolution algorithm seeks to modify the ANN in an evolutionary process similar to the Darwinian process that produced human brains and its process-summarizing maxim 'survival of the fittest'. First methods using neuroevolution can be traced back to the 1980s and 1990s \href{https://www.inovex.de/blog/neuroevolution/}{[cite]}, while the first evolutionary algorithms were conceived in the 1950s by Alan Turing and Nils Barricelli. \href{https://en.wikipedia.org/wiki/Genetic_algorithm#cite_note-mind.oxfordjournals.org-33}{[cite]}
 
@@ -190,9 +190,9 @@ This necessity of a randomly mutated initial population to produce innovation ho
 
 \subsection{Performance of NEAT} \label{sec:neat_performance}
 
-Stanley \& Miikkulainen also included thorough performance analysis in their papers introducing NEAT in 2002 and 2004 [cite all three]. The analysis showed NEAT significantly outperforming [cite test sections from each paper] most preceding NE methods in terms of speed and required evaluations in key benchmarks like the double pole balancing task [cite paper establishing this benchmark] and the XOR topology building task [cite paper establishing this benchmark].
+Stanley \& Miikkulainen also included thorough performance analysis in their papers introducing NEAT in 2002 and 2004 [cite all three]. Their analysis showed NEAT significantly outperforming [cite test sections from each paper] most preceding NE methods in terms of speed and required evaluations in key benchmarks like the double pole balancing task [cite paper establishing this benchmark] and the XOR topology building task [cite paper establishing this benchmark].
 
-The simpler of the two benchmarks - the xor topology building task - is a sanity check for TWEANN algorithms. Because XOR is not linearly separable does a neural network require hidden units to solve it and therefore make this benchmark suitable for testing NEAT's ability to evolve structure. It is clear that NEAT solves the XOR problem without trouble and in doing so keeps the topology small [cite phd chap 4.1]. 
+The simpler of the two benchmarks - the XOR topology building task - is a sanity check for TWEANN algorithms. Because XOR is not linearly separable does a neural network require hidden units to solve it and therefore makes this benchmark suitable for testing NEATs' ability to evolve structure. It is clear that NEAT solves the XOR problem without trouble and in doing so keeps the topology small [cite phd chap 4.1]. 
 
 \begin{figure}
     \includegraphics[width=0.45\textwidth]{{Table_Comparison_DPNV_Benchmark_-_sta02_2}}
@@ -200,7 +200,7 @@ The simpler of the two benchmarks - the xor topology building task - is a sanity
     \label{ill:table_dpnv_benchmark}
 \end{figure}
 
-More importantly however is the Double pole balancing task, as - unlike the XOR topology building task - this benchmark is well suited for performance comparison. This benchmark has been used in RL and NE research for over 30 years [cite ablation paper 3.A] and consists of two poles connected to a moving cart by a hinge, whereas the neural network must apply force to the cart to keep the poles balanced for as long as possible. Figure \ref{ill:table_dpnv_benchmark} lists the table showing the results of the 'Double pole balancing without velocity information' in which NEAT is by far the fastest system on this challenging task, clearly even outperforming ESP (Enforced Subpopulations by Gomez and Miikkulainen 1999 [cite]). This is relevant as ESP, unlike all other NE systems at the time, performs at least in the other experiment 'Double pole balancing with velocity information' at the same level as NEAT [see 30p paper 4.3.2]. This underlines NEATs ability to perform especially well in feedback-sparse environments.
+However, the double pole balancing task is of more importance, as - unlike the XOR topology building task - this benchmark is well suited for performance comparison. This benchmark has been used in RL and NE research for over 30 years [cite ablation paper 3.A] and consists of two poles connected to a moving cart by a hinge, whereas the neural network must apply force to the cart to keep the poles balanced for as long as possible. Figure \ref{ill:table_dpnv_benchmark} lists the table showing the results of the 'double pole balancing without velocity information' experiment, in which NEAT is by far the fastest system on this challenging task, clearly even outperforming ESP (Enforced SubPopulations by Gomez and Miikkulainen 1999 [cite]). This is relevant as ESP, unlike all other NE systems at the time, performs at least in the other 'double pole balancing with velocity information' experiment at the same level as NEAT [see 30p paper 4.3.2]. This underlines NEATs' ability to perform especially well in feedback-sparse environments.
 
 
 
@@ -208,10 +208,10 @@ More importantly however is the Double pole balancing task, as - unlike the XOR 
 
 \subsection{Practical Applications of NEAT}
 
-Practical applications of the NEAT system are plentiful due to its still relevant high performance. One very prominent example of a great application of NEAT is the most accurate measurement to date of the mass of the top quark, which was computed by an enormous team at the Tevatron collider in 2009 \href{https://www.ncbi.nlm.nih.gov/pubmed/19518620}{[cite]}. Though NEAT was not only applied in physics, but also did pioneering work in advancing video game playing AI or medical AI. 
+Practical applications of the NEAT system are plentiful as it is still relevant due to its high performance. One very prominent example of a great application of NEAT is the most accurate measurement to date of the mass of the top quark, which was computed by a very large team at the Tevatron collider in 2009 \href{https://www.ncbi.nlm.nih.gov/pubmed/19518620}{[cite]}. Though NEAT was not only applied in physics, but also enabled pioneering work in advancing video game playing AI or medical AI. 
 The work of a single researcher - Matthew Hausknecht - on Atari video game playing utilizing HyperNEAT \href{https://www.cs.utexas.edu/~mhauskn/projects/atari/movies.html}{[cite]} (a very promising Advancement of NEAT introduced in 2009) was so pioneering that it was later referenced by the DeepMind Team \href{https://arxiv.org/pdf/1312.5602v1.pdf}{[cite]}, who eventually created the famous AlphaStar AI. NEAT was also applied in a recent study published in 2018, which compared the achieved accuracy of different neuroevolution approaches in the context of detecting tumors in medical images \href{http://www.bcc.ufrpe.br/sites/www.bcc.ufrpe.br/files/Luiz%20Fran%C3%A7a.pdf}{[cite]}. NEAT's performance was similar to the established algorithms, even when executing a much smaller number of generation.
     
-Each of these applications implemented their own version of NEAT, as unlike for classical machine learning, there exists no well established framework realizing Neuroevolution. The official NEAT software catalogue \href{http://eplex.cs.ucf.edu/neat_software/}{[cite]} lists 25 different implementations and libraries of NEAT, the most prominent one probably being NEAT-Python \href{https://github.com/codereclaimers/neat-python}{[cite]} by CodeReclaimers. Training an agent to play SuperMario World by utilizing this NEAT-Python library can be realized in under 100 lines of code with good results.
+Each of these applications implemented their own version of NEAT, as - unlike for classical machine learning - there exists no well established framework for neuroevolution. The official NEAT software catalogue \href{http://eplex.cs.ucf.edu/neat_software/}{[cite]} lists 25 different implementations and libraries for vanilla NEAT alone, the most prominent one probably being NEAT-Python \href{https://github.com/codereclaimers/neat-python}{[cite]} by CodeReclaimers. Training an agent to play SuperMario World by utilizing this NEAT-Python library can be realized in under 100 lines of code with good results [cite my supermario git].
 
 There are also currently efforts being made \href{https://github.com/PaulPauls/Tensorflow-Neuroevolution}{[cite]} to implement NEAT in the upcoming Tensorflow 2.0 [cite TF 2.0 release] release as an addon \href{https://github.com/tensorflow/addons}{[cite]} library utilizing Tensorflows newly introduced dynamic computational graphs.
 
@@ -221,7 +221,9 @@ There are also currently efforts being made \href{https://github.com/PaulPauls/T
 
 \section{Conclusion}
 
-As this paper outlines - and the past decade proves - is neuroevolution a promising approach to developing topologies and weights of artifical neural networks. NEAT was a significant advancement for the field of Neuroevolution at the time it was introduced in the year 2002 and is still to this day an important benchmark. Even so did the research community of Neuroevolution not stop innovating and created groundbreaking new neuroevolution algorithms - some being advancement of the original NEAT. Stanley, Risi, D'Ambrosio and Lehman introduced HyperNEAT [cite] and its refinement ES-HyperNEAT [cite] in 2009/2011, further enhancing it with new fitness function objectives like 'Novelty Search' [cite] in 2011. Furthermore did Miikkulainen \& Liang bring the innovations of Deep Learning to Neuroevolution introducing CoDeepNEAT in 2017, while Real \& Aggarwal were able to design a neuroevolution system that surpasses hand-designs for the first time in 2018.
+As this paper outlines - and the past decade proves - is neuroevolution a promising approach to developing topologies and weights of artifical neural networks. NEAT was a significant advancement for the field of Neuroevolution at the time it was introduced in the year 2002 and is still to this day an important benchmark. Even so did the research community of Neuroevolution not stop innovating and created groundbreaking new neuroevolution algorithms - some being advancements of the original NEAT. Stanley, Risi, D'Ambrosio and Lehman introduced HyperNEAT [cite] and its refinement ES-HyperNEAT [cite] in 2009/2011, further enhancing it with new fitness function objectives like 'Novelty Search' [cite] in 2011. Furthermore did Miikkulainen \& Liang bring the innovations of Deep Learning to Neuroevolution introducing CoDeepNEAT in 2017, while Real \& Aggarwal were even able to design a neuroevolution system that surpasses hand-designs for the first time in 2018.
+
+Creating established neuroevolution frameworks that will efficiently use computational resources like the GPU will likely further this field of research even more, as the traditional machine learning frameworks already demonstrated.
 
 
 
