Change Title; Write Abstract

--- a/neuroevolution_of_augmenting_topologies_paper.tex
+++ b/neuroevolution_of_augmenting_topologies_paper.tex
@@ -44,7 +44,7 @@
 
 \begin{document}
 
-\title{On Overview of Neuroevolution and NEAT}
+\title{An Introduction of Neuroevolution of Augmenting Topologies from the Ground Up}
 \author{Paul Pauls\\
         Advisor: Michael Adam}
 \markboth{Neuroevolution of Augmenting Topologies}{}
@@ -70,7 +70,7 @@
 % \tableofcontents
 
 \begin{abstract}
-    \blindtext
+    Neural networks have proven effective at solving difficult problems but designing their architectures can be challenging, especially in times of deep learning with countless parameters to configure. This paper shows one way to automatically create those deep learning topologies by introducing the system 'Neuroevolution of Augmenting Topologies' from the ground up. First The term neuroevolution is determined and established, whereupon the key aspects that define NEAT are illustrated, closing with an outlook of advancements building upon NEAT.
 \end{abstract}
 
 
